column gap fix, tooltip zindex fix

--- a/source/components/Tooltip/index.scss
+++ b/source/components/Tooltip/index.scss
@@ -9,6 +9,7 @@
 	transform: scale(0.7);
 	background: #424242;
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.22);
+	z-index: 99;
 
 	&-arrow{
 		width: 0;
